--- a/index.html
+++ b/index.html
@@ -102,6 +102,8 @@
     <hr />
 
     <p><a href="#top">Back to Top</a></p>
+    <p><a href="https://ndifejoshua.github.io/ALTSchool_assignment2/table.html">Go To Table Page</a></p>
+    <p><a href="https://ndifejoshua.github.io/ALTSchool_assignment2/media.html">Go To Media Page</a></p>
    
   </body>
 </html>
