--- a/index.html
+++ b/index.html
@@ -3,107 +3,173 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Assignment 1</title>
+    <title>Joshua Ndife - AltSchool Engineering Profile</title>
+    <meta
+      name="description"
+      content="AltSchool Software Engineering student profile of Joshua Chukwuebuka Ndife. Learn about his background, goals, and why he joined AltSchool."
+    />
   </head>
   <body>
-    <h1 id="top">My AltSchool Engineering Profile</h1>
+    <header>
+      <nav>
+        <h2>Quick Navigation</h2>
+        <ul>
+          <li><a href="#basic-info">Basic Info</a></li>
+          <li><a href="#bio">Biography</a></li>
+          <li><a href="#why-alt">Why I Joined</a></li>
+          <li><a href="#goals">My Goals</a></li
+        </ul>
+      </nav>
+    </header>
 
-    <div>
-      <h2>Basic Information</h2>
-      <ul>
-        <li><strong>Full Name:</strong> Ndife Joshua Chukwuebuka</li>
-        <li><strong>AltSchool ID:</strong> ALT/SOE/025/1132</li>
-        <li>
-          <strong>Email:</strong>
-          <a href="mailto:ndifejoshua@gmail.com">ndifejoshua@gmail.com</a>
-       </li>
-        <li><strong>Education:</strong> B.Eng., University of Ilorin</li>
-      </ul>
-    </div>
+    <main>
+      <h1 id="top">My AltSchool Engineering Profile</h1>
 
-    <div>
-      <h2>Biography</h2>
-      <p>
-        Joshua Chukwuebuka Ndife is a passionate and goal-driven individual with a
-        background in <strong>Material and Metallurgical Engineering</strong>. He combines
-        problem-solving skills from his engineering training with a strong enthusiasm for
-        technology and software development.
-      </p>
-      <p>
-        Joshua graduated as the Best Student in his department with a
-        <strong>CGPA of 4.83</strong>, earning the <strong>Best Graduating Student Award</strong>.
-        His research experience includes projects on
-        <strong>lithium mineral beneficiation, aluminum matrix composites, and the
-        synthesis of hydroxyapatite from eggshells</strong>.
-      </p>
-      <p>
-        His journey into <strong>Frontend Engineering</strong> was driven by a deep curiosity
-        about how technology shapes user experiences and how intuitive, efficient, and
-        visually appealing interfaces can enhance digital interactions. Joshua is self-taught
-        in <strong>HTML, CSS, JavaScript</strong> and is continuously expanding his
-        knowledge to build responsive and interactive web applications.
-      </p>
-      <p>
-        Beyond software development, Joshua is a Graduate Member of the
-        <strong>Nigerian Society of Engineers (NSE), Nigerian Institution of Mechanical
-        Engineers (NIMechE), and the Materials Science and Technology Society of Nigeria (MSN)</strong>.
-        He is also passionate about
-        <strong>mentorship, community development, and environmental advocacy</strong>,
-        volunteering for initiatives like <strong>Plogging Nigeria</strong> and <strong>YALI Network</strong>.
-      </p>
-      <p>He has also gained practical experience as a freelancer on Upwork, working on projects involving data analysis, virtual assistance, and business research. His recent involvement in the short-term rental industry focused on market analysis and optimization strategies for Airbnb hosts, including initiatives to improve guest experience. He is proficient in lead generation, STR research/arbitrage, emailand calendar management, data entry, and other administrative tasks.
-      </p>
-      <p>
-        
-        In his free time, he enjoys listening to soothing music, watching football
-        (Arsenal fan), cooking, exploring nature, trying new things, and playing Call of Duty Mobile.
-        These hobbies keep him creative, balanced, and open to new experiences.
-      </p>
-    </div>
+      <section id="basic-info">
+        <h2>Basic Information</h2>
+        <ul>
+          <li><strong>Full Name:</strong> Ndife Joshua Chukwuebuka</li>
+          <li><strong>AltSchool ID:</strong> ALT/SOE/025/1132</li>
+          <li>
+            <strong>Email:</strong>
+            <a href="mailto:ndifejoshua@gmail.com">ndifejoshua@gmail.com</a>
+          </li>
+          <li>
+            <strong>Education:</strong>
+            <abbr title="Bachelor of Engineering">B.Eng.</abbr>, University of
+            Ilorin
+          </li>
+        </ul>
+      </section>
 
-    <div>
-      <h2>Why I Joined AltSchool Africa</h2>
-      <p>
-        My decision to join AltSchool Africa was driven by my desire to transition
-        into software development, particularly <strong>Frontend Engineering</strong>.
-        While I considered the self-taught route, I realized that structured learning,
-        mentorship, and a hands-on, project-based approach would accelerate my growth
-        and make me industry-ready.
-      </p>
-      <p>
-        Additionally, a personal experience during a family trip—where I struggled to
-        find medical help due to language barriers and a lack of digital health
-        solutions—inspired me to use technology for impactful change.
-      </p>
-      <p>
-        <strong>AltSchool</strong> stood out to me for its practical learning model,
-        industry-aligned curriculum, experienced instructors, and collaborative student
-        community. The chance to work on real-world projects, receive mentorship, and
-        develop relevant skills made it the perfect fit for my career goals.
-      </p>
-      <p>
-        Financial constraint also played a role in my decision, making the
-        <strong>Ayoba Developer Program Scholarship</strong> a critical support system
-        in my journey toward becoming a skilled software developer.
-      </p>
-    </div>
+      <section id="biography">
+        <h2>Biography</h2>
+        <p>
+          Joshua Chukwuebuka Ndife is a passionate and goal-driven individual
+          with a background in
+          <strong>Material and Metallurgical Engineering</strong>. He combines
+          problem-solving skills from his engineering training with a strong
+          enthusiasm for technology and software development.
+        </p>
+        <p>
+          Joshua graduated as the Best Student in his department with a
+          <strong>CGPA of 4.83</strong>, earning the
+          <strong>Best Graduating Student Award</strong>. His research
+          experience includes projects on
+          <strong>
+            lithium mineral beneficiation, aluminum matrix composites, and the
+            synthesis of hydroxyapatite from eggshells
+          </strong>.
+        </p>
+        <p>
+          His journey into <strong>Frontend Engineering</strong> was driven by a
+          deep curiosity about how technology shapes user experiences and how
+          intuitive, efficient, and visually appealing interfaces can enhance
+          digital interactions. Joshua is self-taught in
+          <strong>HTML, CSS, JavaScript</strong> and is continuously expanding
+          his knowledge to build responsive and interactive web applications.
+        </p>
+        <p>
+          Beyond software development, Joshua is a Graduate Member of the
+          <strong>
+            Nigerian Society of Engineers (NSE), Nigerian Institution of
+            Mechanical Engineers (NIMechE), and the Materials Science and
+            Technology Society of Nigeria (MSN)
+          </strong>.
+          He is also passionate about
+          <strong>mentorship, community development, and environmental advocacy</strong>,
+          volunteering for initiatives like <strong>Plogging Nigeria</strong> and
+          <strong>YALI Network</strong>.
+        </p>
+        <p>
+          He has also gained practical experience as a freelancer on Upwork,
+          working on projects involving data analysis, virtual assistance, and
+          business research. His recent involvement in the short-term rental
+          industry focused on market analysis and optimization strategies for
+          Airbnb hosts, including initiatives to improve guest experience. He is
+          proficient in lead generation, STR research/arbitrage, email and
+          calendar management, data entry, and other administrative tasks.
+        </p>
+        <p>
+          In his free time, he enjoys listening to soothing music, watching
+          football (Arsenal fan), cooking, exploring nature, trying new things,
+          and playing Call of Duty Mobile. These hobbies keep him creative,
+          balanced, and open to new experiences.
+        </p>
+      </section>
 
-    <div>
-      <h2>Set Goals for AltSchool SOE Program</h2>
-      <ul>
-        <li>Master frontend technologies and modern frameworks such as React.js and Vue.js.</li>
-        <li>Develop real-world web applications and contribute to open-source projects with clean, maintainable code.</li>
-        <li>Expand my network and collaborate with other developers on innovative tech solutions.</li>
-        <li>Gain industry experience through internships and hands-on projects.</li>
-        <li>Secure opportunities in Software Engineering.</li>
-      </ul>
-    </div>
+      <section id="why-join">
+        <h2>Why I Joined AltSchool Africa</h2>
+        <p>
+          My decision to join AltSchool Africa was driven by my desire to
+          transition into software development, particularly
+          <strong>Frontend Engineering</strong>. While I considered the
+          self-taught route, I realized that structured learning, mentorship,
+          and a hands-on, project-based approach would accelerate my growth and
+          make me industry-ready.
+        </p>
+        <p>
+          Additionally, a personal experience during a family trip—where I
+          struggled to find medical help due to language barriers and a lack of
+          digital health solutions—inspired me to use technology for impactful
+          change.
+        </p>
+        <p>
+          <strong>AltSchool</strong> stood out to me for its practical learning
+          model, industry-aligned curriculum, experienced instructors, and
+          collaborative student community. The chance to work on real-world
+          projects, receive mentorship, and develop relevant skills made it the
+          perfect fit for my career goals.
+        </p>
+        <p>
+          Financial constraint also played a role in my decision, making the
+          <strong>Ayoba Developer Program Scholarship</strong> a critical
+          support system in my journey toward becoming a skilled software
+          developer.
+        </p>
+      </section>
 
+      <section id="goals">
+        <h2>Set Goals for AltSchool SOE Program</h2>
+        <ul>
+          <li>
+            Master frontend technologies and modern frameworks such as React.js
+            and Vue.js.
+          </li>
+          <li>
+            Develop real-world web applications and contribute to open-source
+            projects with clean, maintainable code.
+          </li>
+          <li>
+            Expand my network and collaborate with other developers on
+            innovative tech solutions.
+          </li>
+          <li>
+            Gain industry experience through internships and hands-on projects.
+          </li>
+          <li>Secure opportunities in Software Engineering.</li>
+        </ul>
+      </section>
+
+    </main>
+    <!-- Horizontal rule for separation -->
     <hr />
 
-    <p><a href="#top">Back to Top</a></p>
-    <a href="https://ndifejoshua.github.io/ALTSchool_assignment2/table.html">Go To Table Page</a>
-    <a href="https://ndifejoshua.github.io/ALTSchool_assignment2/media.html">Go To Media Page</a>
-   
+    <footer>
+      <p>Created by Joshua Chukwuebuka Ndife | &copy; 2025</p>
+
+      <!-- Fragment link back to top of the page -->
+      <p><a href="#top">Back to Top</a></p>
+
+      <!-- External Links to other assignment pages(ASsignment2) -->
+      <a
+        href="https://ndifejoshua.github.io/ALTSchool_assignment2/table.html"
+        >Go To Table Page</a
+      >
+      <a
+        href="https://ndifejoshua.github.io/ALTSchool_assignment2/media.html"
+        >Go To Media Page</a
+      >
+    </footer>
   </body>
 </html>
